update the css to make sure that login/logout don't collapse with the dividing line

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -531,6 +531,6 @@ p#meta_location {
 #summary {
   position: fixed;
   padding-top: 21px;
-  right: 100px;
+  right: 112px;
   z-index: 999;
 }
